<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_app">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger_app">BUILD IT BIGGER APP</string>
    <string name="xyz_reader_app">XYZ READER APP</string>
    <string name="my_own_app">CAPSTONE: MY OWN APP</string>
</resources>
