<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginBottom="50dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textIsSelectable="false"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_spotify_streamer_app"
        style="@style/MyButtonTheme"
        android:text="@string/spotify_streamer_app"/>

    <Button
        android:id="@+id/btn_scores_app"
        style="@style/MyButtonTheme"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/btn_library_app"
        style="@style/MyButtonTheme"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/MyButtonTheme"
        android:text="@string/build_it_bigger_app"/>

    <Button
        android:id="@+id/btn_xyz_reader_app"
        style="@style/MyButtonTheme"
        android:text="@string/xyz_reader_app" />

    <Button
        android:id="@+id/btn_my_own_app"
        style="@style/MyButtonTheme"
        android:text="@string/my_own_app"
        android:background="@android:color/holo_red_light"/>
</LinearLayout>